--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.2",
+    "@vechaiui/core": "^0.6.0",
+    "@vechaiui/react": "^0.2.2",
     "axios": "^0.21.1",
     "next": "^13.0.3",
     "react": "^18.2.0",
